add integrated swagger api docs
